# vana-personal-server

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .releaserc.yaml  AGENT_SECRETS.md  CRITICAL_FIXES.md  DOCKER_AGENTS.md  DOCS_GUIDE.md  Dockerfile  Dockerfile.agent  LOOP_DEVICE_SETUP.md  Makefile  README.md  REFACTORING_GUIDE.md  STREAMING_IMPLEMENTATION_PLAN.md  app.py  build-agent-image.sh  cloudbuild.yaml  dependencies.py  docker-compose.yml  domain.py  models.py  openapi.yaml  package-lock.json  package.json  pyproject.toml  settings.py  test_agent_runtime.py  test_chatgpt_integration.py  test_comprehensive_check.py  test_docker_agents.py  test_imports.py  test_local.sh  test_real_data_flow.py  test_refactoring_concepts.py
api/: __init__.py  artifacts.py  identity.py  operations.py  schemas.py
app/: Dockerfile  README.md  dependencies.py  domain.py  models.py  pyproject.toml  settings.py
app/api/: __init__.py  identity.py  operations.py
app/compute/: replicate.py
app/grants/: __init__.py
app/onchain/: abi.py  data_permissions.py
app/providers/: base.py  replicate.py
app/services/: identity.py  operations.py
app/tests/unit/: test_models.py
app/utils/: crypto_service.py  derive_ethereum_keys.py  ipfs.py  response_formatting.py
archived/: AGENT_INTEGRATION_SUMMARY.md  CLOUDFLARE_R2_SETUP.md  LOCAL_TESTING.md  PRODUCTION_API_DESIGN.md  PRODUCTION_REQUIREMENTS.md  README_DOCKER_TEST.md  chatgpt-convo.txt  check_cli_help.py  debug_gemini.py  test_agent_routing.py  test_container_agent.py  test_gemini_simple.py  test_local_docker.sh  test_mock_api.py  test_personal_data.py  view_result.py
benchmarks/: benchmark_replicate_server.py  key_derivation_client.py  replicate_client.py
compatibility/: CROSS_PLATFORM_COMPATIBILITY_REPORT.md  README.md  cross_platform_compatibility_test.js  cross_platform_test_results.json  edge_case_test_results.json  edge_case_tests.js  standalone_decrypt.py
compute/: base.py  base_agent.py  base_agent_refactored.py  gemini_agent.py  local_inference.py  openai_provider.py  privacy_preserving_inference.py  provider_factory.py  qwen_agent.py  replicate.py
docs/: gemini-cli-streaming-investigation-2025-10-12.md
domain/: __init__.py  (+4 more)
server/: .dockerignore  .env.example  README.md  cog.yaml  encrypt.py  entities.py  identity_server.py  personal_server.py  predict.py  pyproject.toml  requirements.txt  server.py  test_decrypt_simple.py  test_fix.py  test_request.json
server/.cog/: openapi_schema.json
server/.cog/tmp/build20250701133933.578805/: requirements.txt
server/files/: __init__.py  decrypt.py  download.py
server/grants/: __init__.py  fetch.py  fetch_grant.py  grantFile.schema.json  grant_files.py  grant_models.py  grant_validation.py  validate.py
server/llm/: llm.py
server/onchain/: abi.py  access_permissions.py  chain.py  data_permissions.py  data_registry.py
server/testing/: encryption.py  test_comprehensive_personal_server.py  test_ecies_fix.py  test_grants_integration.py  test_mocks.py  test_moksha.py  test_personal_server.py  utils.py
server/utils/: crypto_service.py  identity_server.py
(+96 files in other folders)
