[tool.poetry]
name = "personal-server"
version = "0.1.0"
description = "Personal server"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
replicate = "^0.24.0"
python-dotenv = "^1.0.0"
web3 = "^6.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 